--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -24,8 +24,17 @@
         <filter-name>struts2</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+<filter>
 
-    <!-- Spring3配置 -->
+    <filter-name>hibernateFilter</filter-name>
+    <filter-class>  org.springframework.orm.hibernate3.support.OpenSessionInViewFilter </filter-class>
+</filter>
+<filter-mapping>
+<filter-name>hibernateFilter</filter-name>
+<url-pattern>/*</url-pattern>
+</filter-mapping>
+
+        <!-- Spring3配置 -->
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
@@ -36,7 +45,9 @@
 
 
 
-    <welcome-file-list>
+
+
+<welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 
