--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -1,6 +1,23 @@
-### direct log messages to stdout ###
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target=System.out
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
-log4j.rootLogger=error, stdout
+#log4j.rootLogger = [ level ] , appenderName, appenderName, ...
+log4j.rootLogger = INFO, console, R
+#level=INFO,all can be output
+#console is set to be a ConsoleAppender
+log4j.appender.console = org.apache.log4j.ConsoleAppender
+#console have four patterns
+#org.apache.log4j.HTMLLayout
+#org.apache.log4j.PatternLayout
+#org.apache.log4j.SimpleLayout
+#org.apache.log4j.TTCCLayout
+log4j.appender.console.layout = org.apache.log4j.PatternLayout
+#define the output type
+log4j.appender.console.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [%c]-[%p] %m%n
+#file is set to output to a extra file
+log4j.appender.R = org.apache.log4j.RollingFileAppender
+#the absolute route of the log4j file
+log4j.appender.R.File = /Users/chenzhaowen/Desktop/log.log
+#the size
+log4j.appender.R.MaxFileSize = 500KB
+#back up a file
+log4j.appender.R.MaxBackupIndex = 1
+log4j.appender.R.layout = org.apache.log4j.PatternLayout
+log4j.appender.R.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss} [%c]-[%p] - %m%n
