--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -44,8 +44,20 @@
     </context-param>
 
 
+    <context-param>
+        <param-name>log4jConfigLocation</param-name>
+        <param-value>/WEB-INF/classes/log4j.properties</param-value>
+    </context-param>
+    <context-param>
+        <param-name>log4jRefreshInterval</param-name>
+        <param-value>6000</param-value>
+    </context-param>
 
-
+    <listener>
+        <listener-class>
+            org.springframework.web.util.Log4jConfigListener
+        </listener-class>
+    </listener>
 
 <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
