部分完成版

--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -1,5 +1,5 @@
 #log4j.rootLogger = [ level ] , appenderName, appenderName, ...
-log4j.rootLogger = INFO, console, R
+log4j.rootLogger = INFO, R
 #level=INFO,all can be output
 #console is set to be a ConsoleAppender
 log4j.appender.console = org.apache.log4j.ConsoleAppender
@@ -14,6 +14,8 @@ log4j.appender.console.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [%c]-
 #file is set to output to a extra file
 log4j.appender.R = org.apache.log4j.RollingFileAppender
 #the absolute route of the log4j file
+log4j.appender.info.Threshold = INFO  
+log4j.appender.info.File = /Users/chenzhaowen/Desktop/info_log.log
 log4j.appender.R.File = /Users/chenzhaowen/Desktop/log.log
 #the size
 log4j.appender.R.MaxFileSize = 500KB
